[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betti"
version = "0.1.0"
description = "Python interface for topological data analysis using a Julia backend"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Borna R. Ravlić", email="bornarravlic@example.com"}]
license = {text = "MIT"}
dependencies = [
    "numpy",
    "matplotlib",
    "pyjulia"
]
